fix: P4ADEV-2404 getSendNotification + Api Refactor